--- a/.github/workflows/ci-cpp.yml
+++ b/.github/workflows/ci-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: myapp
-      run: ./myapp
+      run: .\myapp.exe
     - name: make
       run: make
     - name: make check
